# halo2sha256bench

./: Cargo.toml
pse/: Cargo.toml
pse/src/: main.rs
zcash/: Cargo.toml
zcash/src/: main.rs
