[package]
name = "zcash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = {git = "https://github.com/zcash/halo2", branch = "main" }
halo2_gadgets = {git = "https://github.com/zcash/halo2", branch = "main" , features = ["unstable-sha256-gadget"]}
arrayvec = "0.7.0"
bitvec = "1"
ff = "0.13"
group = "0.13"
lazy_static = "1"
pasta_curves = "0.5"
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
subtle = "2.3"
uint = "0.9.2" # MSRV 1.56.1
chrono = "0.4.23"
